--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,68 +2,81 @@
   "WebDev":[
     {
       "name": "Claude AI Frontend Clone",
-      "description": "This is a very nice Claude AI Frontend Clone which is very good like very good",
+      "description": "A Frontend-only, responsive clone with interactive UI elements with home and chat pages",
       "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
       "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "https://placehold.co/600x400",
+      "image": "./claude.png",
       "skills": ["html", "css", "js", "react", "tailwind"],
       "color": "red"
     },
     {
-      "name": "Claude AI Frontend Clone",
-      "description": "This is a very nice Claude AI Frontend Clone which is very good like very good",
-      "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
-      "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "https://placehold.co/600x400",
-      "skills": ["html", "css", "js", "react", "tailwind"],
-      "color": "red"
+      "name": "Super Tic Tac Toe",
+      "description": "Super/Ultimate/Multidimensional Tic Tac Toe game with dynamic highlighting of playable areas",
+      "github": "https://github.com/sahaj-b/super-tic-tac-toe",
+      "demo": "https://sahaj-b.github.io/super-tic-tac-toe/superTTT.html",
+      "image": "./superttt.jpg",
+      "skills": ["html", "css", "js"],
+      "color": "blue"
     },
     {
-      "name": "Claude AI Frontend Clone",
-      "description": "This is a very nice Claude AI Frontend Clone which is very good like very good",
-      "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
-      "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "https://placehold.co/600x400",
+      "name": "Personal Portfolio",
+      "description": "Ya like it?",
+      "github": "https://github.com/sahaj-b/portfolio",
+      "demo": "",
+      "image": "./portfolio.png",
       "skills": ["html", "css", "js", "react", "tailwind"],
-      "color": "red"
-    },
-    {
-      "name": "Claude AI Frontend Clone",
-      "description": "This is a very nice Claude AI Frontend Clone which is very good like very good",
-      "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
-      "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "https://placehold.co/600x400",
-      "skills": ["html", "css", "js", "react", "tailwind"],
-      "color": "red"
-    },
-    {
-      "name": "Claude AI Frontend Clone",
-      "description": "This is a very nice Claude AI Frontend Clone which is very good like very good",
-      "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
-      "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "https://placehold.co/600x400",
-      "skills": ["html", "css", "js", "react", "tailwind"],
-      "color": "red"
+      "color": "mauve"
     }
   ],
   "other":[
+    
     {
-      "name": "Claude AI Frontend Clone",
-      "description": "This is a very nice Claude AI Frontend Clone which is very good like very good",
-      "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
-      "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "https://placehold.co/600x400",
-      "skills": ["html", "css", "js", "react", "tailwind"],
-      "color": "red"
+      "name": "Flappy Bird Ninja",
+      "description": "Flappy Bird, but it can shoot shurikens to kill bad birds >:)",
+      "github": "https://github.com/sahaj-b/flappy-bird-ninja",
+      "image": "./flappy.jpg",
+      "skills": ["python", "pygame"],
+      "color": "sky"
     },
     {
-      "name": "Claude AI Frontend Clone",
-      "description": "This is a very nice Claude AI Frontend Clone which is very good like very good",
-      "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
-      "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "https://placehold.co/600x400",
-      "skills": ["html", "css", "js", "react", "tailwind"],
-      "color": "red"
+      "name": "Wayvibes",
+      "description": "A Linux(Wayland)-native CLI that plays custom keyboard sounds globally on keypresses (wayland alternative for mechvibes)",
+      "github": "https://github.com/sahaj-b/wayvibes",
+      "image": "./wayvibes.png",
+      "skills": ["cpp"],
+      "color": "yellow"
+    },
+    {
+      "name": "Terminal Dino Run",
+      "description": "Simple Dino Run game which runs on a terminal",
+      "github": "https://github.com/sahaj-b/dino-run-terminal",
+      "image": "./dino.png",
+      "skills": ["python"],
+      "color": "green"
+    },
+    {
+      "name": "Terminal Snake",
+      "description": "Retro Snake game for the Linux terminal, with dynamic speed and grid size controls",
+      "github": "https://github.com/sahaj-b/snake-terminal",
+      "image": "./snake.png",
+      "skills": ["cpp"],
+      "color": "text"
+    },
+    {
+      "name": "Automation Scripts",
+      "description": "Lot of Linux scripts for automating my workflow and enhancing productivity",
+      "github": "https://github.com/sahaj-b/dotfiles/tree/main/scripts",
+      "image": "./scripts.png",
+      "skills": ["cpp", "bash", "python"],
+      "color": "yellow"
+    },
+    {
+      "name": "YAAI Fake Virus",
+      "description": "Remake of YouAreAnIdiot virus with Tkinter becuase I couldn't find any open source version",
+      "github": "https://github.com/sahaj-b/YouAreAnIdiot-FakeVirus",
+      "image": "./yaai.jpg",
+      "skills": ["python"],
+      "color": "text"
     }
 
   ]
