convert images to webp

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,7 @@
       "description": "A Frontend-only, responsive clone with interactive UI elements with home and chat pages",
       "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
       "demo": "https://sahaj-claude-clone.vercel.app/",
-      "image": "./claude.png",
+      "image": "./claude.webp",
       "skills": ["HTML5", "CSS", "JavaScript", "React", "Tailwind"],
       "color": "red"
     },
@@ -14,7 +14,7 @@
       "description": "Super/Ultimate/Multidimensional Tic Tac Toe game with dynamic highlighting of playable areas",
       "github": "https://github.com/sahaj-b/super-tic-tac-toe",
       "demo": "https://sahaj-b.github.io/super-tic-tac-toe/superTTT.html",
-      "image": "./superttt.jpg",
+      "image": "./superttt.webp",
       "skills": ["HTML5", "CSS", "JavaScript"],
       "color": "blue"
     },
@@ -23,7 +23,7 @@
       "description": "Ya like it?",
       "github": "https://github.com/sahaj-b/portfolio",
       "demo": "https://sahajb.vercel.app",
-      "image": "./portfolio.png",
+      "image": "./portfolio.webp",
       "skills": ["HTML5", "CSS", "JavaScript", "React", "Tailwind"],
       "color": "mauve"
     }
@@ -34,7 +34,7 @@
       "name": "Flappy Bird Ninja",
       "description": "Flappy Bird, but it can shoot shurikens to kill bad birds",
       "github": "https://github.com/sahaj-b/flappy-bird-ninja",
-      "image": "./flappy.jpg",
+      "image": "./flappy.webp",
       "skills": ["Python", "Pygame"],
       "color": "sky"
     },
@@ -42,7 +42,7 @@
       "name": "Wayvibes",
       "description": "A Linux(Wayland)-native CLI that plays custom keyboard sounds globally on keypresses (wayland alternative for mechvibes)",
       "github": "https://github.com/sahaj-b/wayvibes",
-      "image": "./wayvibes.png",
+      "image": "./wayvibes.webp",
       "skills": ["C++"],
       "color": "yellow"
     },
@@ -50,7 +50,7 @@
       "name": "Scrntime",
       "description": "A CLI that displays daily screentime for linux with afk/idle time support",
       "github": "https://github.com/sahaj-b/wayvibes",
-      "image": "./scrntime.png",
+      "image": "./scrntime.webp",
       "skills": ["Python"],
       "color": "blue"
     },
@@ -58,7 +58,7 @@
       "name": "Terminal Dino Run",
       "description": "Simple Dino Run game which runs on a terminal",
       "github": "https://github.com/sahaj-b/dino-run-terminal",
-      "image": "./dino.png",
+      "image": "./dino.webp",
       "skills": ["Python"],
       "color": "green"
     },
@@ -66,7 +66,7 @@
       "name": "Terminal Snake",
       "description": "Retro Snake game for the Linux terminal, with dynamic speed and grid size controls",
       "github": "https://github.com/sahaj-b/snake-terminal",
-      "image": "./snake.png",
+      "image": "./snake.webp",
       "skills": ["C++"],
       "color": "text"
     },
@@ -74,7 +74,7 @@
       "name": "Automation Scripts",
       "description": "Lot of Linux scripts for automating my workflow and enhancing productivity",
       "github": "https://github.com/sahaj-b/dotfiles/tree/main/scripts",
-      "image": "./scripts.png",
+      "image": "./scripts.webp",
       "skills": ["C++", "Bash", "Python"],
       "color": "yellow"
     },
@@ -82,7 +82,7 @@
       "name": "YAAI Fake Virus",
       "description": "Remake of YouAreAnIdiot virus for Windows with Tkinter because I couldn't find any open source version",
       "github": "https://github.com/sahaj-b/YouAreAnIdiot-FakeVirus",
-      "image": "./yaai.jpg",
+      "image": "./yaai.webp",
       "skills": ["Python"],
       "color": "text"
     }
