--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
     "@eslint/js": "^9.15.0",
+    "@iconify/react": "^5.2.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
