add new project

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,15 @@
 {
   "WebDev":[
     {
+      "name": "Who Sent This?",
+      "description": "A web app to send, receive and reply anonymous messages",
+      "github": "https://github.com/sahaj-b/who-sent-this",
+      "demo": "https://whosentthis.vercel.app/",
+      "image": "./who-sent-this.webp",
+      "skills": ["HTML5", "CSS", "TypeScript", "React", "Tailwind", "MongoDB", "Express", "NodeJS"],
+      "color": "mauve"
+    },
+    {
       "name": "Claude AI Frontend Clone",
       "description": "A Frontend-only, responsive clone with interactive UI elements with home and chat pages",
       "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
