format and fix lint errors, aria props, fix types and css

--- a/biome.json
+++ b/biome.json
@@ -39,6 +39,11 @@
     },
     "rules": {
       "recommended": true,
+      "a11y": {
+        "useFocusableInteractive": "off",
+        "useSemanticElements": "off",
+        "useKeyWithClickEvents": "off"
+      },
       "style": {
         "useImportType": "error",
         "useExportType": "error"
