--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,16 +6,7 @@
       "github": "https://github.com/sahaj-b/who-sent-this",
       "demo": "https://whosentthis.vercel.app/",
       "image": "./who-sent-this.webp",
-      "skills": [
-        "HTML5",
-        "CSS",
-        "TypeScript",
-        "React",
-        "Tailwind",
-        "MongoDB",
-        "Express",
-        "NodeJS"
-      ],
+      "skills": ["HTML5", "CSS", "TypeScript", "React", "Tailwind", "MongoDB", "Express", "NodeJS"],
       "color": "red"
     },
     {
@@ -24,13 +15,7 @@
       "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
       "demo": "https://sahaj-claude-clone.vercel.app/",
       "image": "./claude.webp",
-      "skills": [
-        "HTML5",
-        "CSS",
-        "JavaScript",
-        "React",
-        "Tailwind"
-      ],
+      "skills": ["HTML5", "CSS", "JavaScript", "React", "Tailwind"],
       "color": "maroon"
     },
     {
@@ -39,11 +24,7 @@
       "github": "https://github.com/sahaj-b/super-tic-tac-toe",
       "demo": "https://sahaj-b.github.io/super-tic-tac-toe/superTTT.html",
       "image": "./superttt.webp",
-      "skills": [
-        "HTML5",
-        "CSS",
-        "JavaScript"
-      ],
+      "skills": ["HTML5", "CSS", "JavaScript"],
       "color": "blue"
     },
     {
@@ -52,13 +33,7 @@
       "github": "https://github.com/sahaj-b/portfolio",
       "demo": "https://sahajb.vercel.app",
       "image": "./portfolio.webp",
-      "skills": [
-        "HTML5",
-        "CSS",
-        "JavaScript",
-        "React",
-        "Tailwind"
-      ],
+      "skills": ["HTML5", "CSS", "JavaScript", "React", "Tailwind"],
       "color": "mauve"
     }
   ],
@@ -68,10 +43,7 @@
       "description": "Flappy Bird, but it can shoot shurikens to kill bad birds",
       "github": "https://github.com/sahaj-b/flappy-bird-ninja",
       "image": "./flappy.webp",
-      "skills": [
-        "Python",
-        "Pygame"
-      ],
+      "skills": ["Python", "Pygame"],
       "color": "sky"
     },
     {
@@ -79,9 +51,7 @@
       "description": "StdLib-only Attendance Tracker TUI from scratch in Go",
       "github": "https://github.com/sahaj-b/go-attend",
       "image": "./go-attend.webp",
-      "skills": [
-        "Golang"
-      ],
+      "skills": ["Golang"],
       "color": "yellow"
     },
     {
@@ -89,9 +59,7 @@
       "description": "A Linux(Wayland)-native CLI that plays custom keyboard sounds globally on keypresses (wayland alternative for mechvibes)",
       "github": "https://github.com/sahaj-b/wayvibes",
       "image": "./wayvibes.webp",
-      "skills": [
-        "C++"
-      ],
+      "skills": ["C++"],
       "color": "yellow"
     },
     {
@@ -99,9 +67,7 @@
       "description": "A CLI that displays daily screentime for linux with afk/idle time support",
       "github": "https://github.com/sahaj-b/wayvibes",
       "image": "./scrntime.webp",
-      "skills": [
-        "Python"
-      ],
+      "skills": ["Python"],
       "color": "blue"
     },
     {
@@ -109,9 +75,7 @@
       "description": "Simple Dino Run game which runs on a terminal",
       "github": "https://github.com/sahaj-b/dino-run-terminal",
       "image": "./dino.webp",
-      "skills": [
-        "Python"
-      ],
+      "skills": ["Python"],
       "color": "green"
     },
     {
@@ -119,9 +83,7 @@
       "description": "Retro Snake game for the Linux terminal, with dynamic speed and grid size controls",
       "github": "https://github.com/sahaj-b/snake-terminal",
       "image": "./snake.webp",
-      "skills": [
-        "C++"
-      ],
+      "skills": ["C++"],
       "color": "text"
     },
     {
@@ -129,11 +91,7 @@
       "description": "Lot of Linux scripts for automating my workflow and enhancing productivity",
       "github": "https://github.com/sahaj-b/dotfiles/tree/main/scripts",
       "image": "./scripts.webp",
-      "skills": [
-        "C++",
-        "Bash",
-        "Python"
-      ],
+      "skills": ["C++", "Bash", "Python"],
       "color": "yellow"
     },
     {
@@ -141,9 +99,7 @@
       "description": "Remake of YouAreAnIdiot virus for Windows with Tkinter because I couldn't find any open source version",
       "github": "https://github.com/sahaj-b/YouAreAnIdiot-FakeVirus",
       "image": "./yaai.webp",
-      "skills": [
-        "Python"
-      ],
+      "skills": ["Python"],
       "color": "text"
     }
   ]
