--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,7 +6,7 @@
       "github": "https://github.com/sahaj-b/who-sent-this",
       "demo": "https://whosentthis.vercel.app/",
       "image": "./who-sent-this.webp",
-      "skills": ["HTML5", "CSS", "TypeScript", "React", "Tailwind", "MongoDB", "Express", "NodeJS"],
+      "skills": ["TypeScript", "React", "Tailwind", "MongoDB", "Express", "Node"],
       "color": "red"
     },
     {
@@ -15,8 +15,17 @@
       "github": "https://github.com/sahaj-b/claudeAI-frontend-clone",
       "demo": "https://sahaj-claude-clone.vercel.app/",
       "image": "./claude.webp",
-      "skills": ["HTML5", "CSS", "JavaScript", "React", "Tailwind"],
+      "skills": ["JavaScript", "React", "Tailwind"],
       "color": "maroon"
+    },
+    {
+      "name": "Personal Portfolio",
+      "description": "Ya like it?",
+      "github": "https://github.com/sahaj-b/portfolio",
+      "demo": "https://sahaj.dev",
+      "image": "./portfolio.webp",
+      "skills": ["TypeScript", "React", "Tailwind", "NextJS"],
+      "color": "mauve"
     },
     {
       "name": "Super Tic Tac Toe",
@@ -24,17 +33,8 @@
       "github": "https://github.com/sahaj-b/super-tic-tac-toe",
       "demo": "https://sahaj-b.github.io/super-tic-tac-toe/superTTT.html",
       "image": "./superttt.webp",
-      "skills": ["HTML5", "CSS", "JavaScript"],
+      "skills": ["JavaScript"],
       "color": "blue"
-    },
-    {
-      "name": "Personal Portfolio",
-      "description": "Ya like it?",
-      "github": "https://github.com/sahaj-b/portfolio",
-      "demo": "https://sahajb.vercel.app",
-      "image": "./portfolio.webp",
-      "skills": ["HTML5", "CSS", "JavaScript", "React", "Tailwind"],
-      "color": "mauve"
     }
   ],
   "other": [
@@ -79,28 +79,12 @@
       "color": "green"
     },
     {
-      "name": "Terminal Snake",
-      "description": "Retro Snake game for the Linux terminal, with dynamic speed and grid size controls",
-      "github": "https://github.com/sahaj-b/snake-terminal",
-      "image": "./snake.webp",
-      "skills": ["C++"],
-      "color": "text"
-    },
-    {
       "name": "Automation Scripts",
       "description": "Lot of Linux scripts for automating my workflow and enhancing productivity",
       "github": "https://github.com/sahaj-b/dotfiles/tree/main/scripts",
       "image": "./scripts.webp",
       "skills": ["C++", "Bash", "Python"],
       "color": "yellow"
-    },
-    {
-      "name": "YAAI Fake Virus",
-      "description": "Remake of YouAreAnIdiot virus for Windows with Tkinter because I couldn't find any open source version",
-      "github": "https://github.com/sahaj-b/YouAreAnIdiot-FakeVirus",
-      "image": "./yaai.webp",
-      "skills": ["Python"],
-      "color": "text"
     }
   ]
 }
